--- a/production/styles/main.css
+++ b/production/styles/main.css
@@ -77,6 +77,7 @@ width: 40%;
   font-size: 48px;
 }
 .inform{
+  margin-bottom: 30px;
   text-indent: 0.5em;
   font-weight: normal;
   font-size: 16px;
@@ -84,9 +85,21 @@ width: 40%;
 }
 #main-info{
   background: #f0f0f0;
-  height: 300px;
+  height: 320px;
   padding: 20px 20px;
   display: block;
+}
+#main-info h1{
+  font-size: 26px;
+  text-align: center;
+}
+#main-info-article{
+text-indent: 14px;
+line-height: 20pt;
+}
+#btn-center{
+padding-top: 10px;
+text-align: center;
 }
 #cat-details, #item-details{
   border-radius: 5px;
