--- a/production/styles/main.css
+++ b/production/styles/main.css
@@ -38,7 +38,7 @@ width: 40%;
   	background: transparent;
   }
 #main-header{
-  display: flex;
+  display: none;
   flex-direction: row;
   height: 120px;
 }
@@ -74,9 +74,14 @@ width: 40%;
   display: flex;
   flex-direction: row;
 }
+@media (max-width: 480px) {
+.main-row{
+  flex-direction: column;
+}
+}
 .child-col{
   margin: 0;
-  width: 33%;
+  width: 100%;
 }
 .icon-block{
 
@@ -120,7 +125,7 @@ text-align: center;
 }
 @media (max-width: 480px) {
   #main-info{
-   height: 620px;
+   height: 700px;
   }
 }
 #cat-details, #item-details{
@@ -174,19 +179,24 @@ footer{
 }
 
 .brand {
+  display: none;
   position: absolute;
   padding-left: 20px;
   float: left;
   line-height: 70px;
-  text-transform: uppercase;
-  font-size: 1.4em;
+
+  font-size: 1.1em;
 }
 .brand a,
 .brand a:visited {
   color: #ffffff;
   text-decoration: none;
 }
-
+@media (max-width: 480px) {
+  .brand{
+  display: block;
+}
+}
 .nav-container {
   max-width: 1000px;
   margin: 0 auto;
@@ -244,7 +254,7 @@ nav ul li ul li a {
   position: absolute;
   top: 0;
   right: 0;
-  margin-top: 120px;
+  margin-top: 0px;
   background: #262626;
   height: 70px;
   width: 70px;
